--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
                 <ul>
                   <a href="women_section.html"><li>New Arrivals</li></a>
                   <a href="women_section.html"><li>Top Wears</li></a>
-                  <a href="women_section.html"><li>Hoodies & Sweatshirts</li></a>
+                  <a href="women_section.html"
+                    ><li>Hoodies & Sweatshirts</li></a
+                  >
                   <a href="women_section.html"><li>Long Sleeve T-shirts</li></a>
                   <li>Printed T-shirts</li>
                   <li>Plain T-shirts</li>
@@ -144,7 +146,7 @@
       />
       <h4>|</h4>
       <a href="login.html"><i class="fa-solid fa-user-ninja"></i></a>
-      <a style="text-decoration:none" href="wishlist.html"><p>🤍</p></a>
+      <a style="text-decoration: none" href="wishlist.html"><p>🤍</p></a>
       <a href="login.html"
         ><i class="fa-sharp fa-solid fa-cart-shopping"></i
       ></a>
@@ -156,26 +158,26 @@
         />
       </p>
     </div>
-
     <div id="midNav">
       <img
         src="https://images.bewakoof.com/web/Gender-Picker-Banner-desktop-desktop-1-1667479003.jpg"
         alt=""
       />
     </div>
-
     <div id="image">
       <div>
-        <img
-          src="https://images.bewakoof.com/web/Gender-Picker-Banner-desktop-desktop-men-2-1667479004.jpg"
-          alt=""
-        />
+        <a href="men_section.html"
+          ><img
+            src="https://images.bewakoof.com/web/Gender-Picker-Banner-desktop-desktop-men-2-1667479004.jpg"
+            alt=""
+        /></a>
       </div>
       <div>
-        <img
-          src="https://images.bewakoof.com/web/Gender-Picker-Banner-desktop-desktop-women-3-1667479005.jpg"
-          alt=""
-        />
+        <a href="women_section.html"
+          ><img
+            src="https://images.bewakoof.com/web/Gender-Picker-Banner-desktop-desktop-women-3-1667479005.jpg"
+            alt=""
+        /></a>
       </div>
     </div>
 
@@ -320,7 +322,7 @@
       src="https://images.bewakoof.com/uploads/grid/app/VoteForDesign-ThinStrip-Desktop-Revised-1667372740.gif"
       alt=""
     />
-    
+
     <div id="container">
       <div id="bewakoof2">
         <h3>YellowC@rt</h3>
@@ -450,7 +452,17 @@
           <p>Xiomi</p>
         </div>
         <div id="teal">
-          <a style=" text-decoration: none;" href="offer.html"><h3 style="color: rgb(1, 207, 207); font-weight: 600;margin-bottom:30px; ">OFFERS</h3></a>
+          <a style="text-decoration: none" href="offer.html"
+            ><h3
+              style="
+                color: rgb(1, 207, 207);
+                font-weight: 600;
+                margin-bottom: 30px;
+              "
+            >
+              OFFERS
+            </h3></a
+          >
           <h3 style="color: rgb(1, 207, 207); font-weight: 600">FANBOOK</h3>
           <h3 style="color: rgb(1, 207, 207); font-weight: 600">SITEMAP</h3>
         </div>
