--- a/otp.html
+++ b/otp.html
@@ -58,7 +58,8 @@
   });
 
   function check() {
-    alert("✅ OTP Submission Successful");
+    alert("✅ OTP Submission Successful....");
+    alert("🚀 Redirecting to Home Page");
     location.href="index.html"
     }
 </script>
