--- a/otp1.html
+++ b/otp1.html
@@ -63,7 +63,7 @@
   });
 
   function check() {
-    alert("✅ Submit OTP to Register Successfully");
+    alert("🔡 Submit OTP to Register Successfully");
     location.href="otp.html"
     }
 </script>
