--- a/women_section.html
+++ b/women_section.html
@@ -327,9 +327,9 @@
       </div>
       <!-- <div style="width:10px" ></div> -->
       <h4>|</h4>
-      <p><i class="fa-solid fa-user-ninja"></i></p>
-      <p>🤍</p>
-      <p><i class="fa-sharp fa-solid fa-cart-shopping"></i></p>
+      <a href="login.html"><p><i class="fa-solid fa-user-ninja"></i></p></a>
+      <a href="wishlist.html"><p>🤍</p></a>
+      <a href="cart.html"><p><i class="fa-sharp fa-solid fa-cart-shopping"></i></p></a>
       <p>
         <img
           id="india"
